Forge registry super types are no longer unique
Updated ObjectHolder and DeferredRegister to require a registry name
Updated DeferredRegister documentation a bit
Updated all usages in Forge and test mods to reflect these changes

Signed-off-by: SizableShrimp <sizableshrimp@sizableshrimp.me>